# Todo

./: README.md  alembic.ini  database.py  dependencies.py  hashing_password.py  main.py  models.py  pyproject.toml  schemas.py
app/: dependencies.py  main.py  settings.py
app/alembic/: alembic.ini
app/models/: todo.py  user.py
app/routers/: crud.py  login.py  todo.py  user.py
app/schemas/: todo_schema.py  user_schema.py
migration_directory/: env.py
migration_directory/versions/: 7755c13b3040_create_user_and_todo_table.py  faee8eeac816_create_table_users_and_todo.py
